main/default/objects/Connected_Org__c/Connected_Org__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Connected Org</label>
</CustomObject>