main/default/objects/Connected_Org__c/fields/Connection_Valid__c.field-meta.xml
<CustomField>
    <fullName>Connection_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connection Valid</label>
    <type>Checkbox</type>
</CustomField>