main/default/objects/Connected_Org__c/fields/Data_Direction__c.field-meta.xml
<CustomField>
    <fullName>Data_Direction__c</fullName>
    <label>Data Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>