main/default/objects/Connected_Org__c/fields/Identity_Url__c.field-meta.xml
<CustomField>
    <fullName>Identity_Url__c</fullName>
    <label>Identity Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>