main/default/objects/Connected_Org__c/fields/Scheduler_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduler Enabled</label>
    <type>Checkbox</type>
</CustomField>