main/default/objects/Connected_Org__c/fields/Token_Refreshed_At__c.field-meta.xml
<CustomField>
    <fullName>Token_Refreshed_At__c</fullName>
    <label>Token Refreshed At</label>
    <type>DateTime</type>
</CustomField>